Change padding and margin on hamburger button to help display correctly centered on iOS.

--- a/src/app/shared/header/header.component.scss
+++ b/src/app/shared/header/header.component.scss
@@ -79,6 +79,8 @@ header {
       height: 2.5rem;
       width: 4rem;
       font-size: 1.5rem;
+      padding: 0;
+      margin: 0;
     }
   }
 
